--- a/sapo.html
+++ b/sapo.html
@@ -29,13 +29,13 @@
       <h2>¡Sigue nuestro paso a paso!</h2> 
       <img src="Paso a paso sapo anura.jpg" alt="W3Schools.com" width="1080" height="860">
       <h2>¡Personaliza tu juego con estas texturas!</h2> 
-        <img src="Textura final rana 1.jpeg" alt="W3Schools.com" width="100" height="200">
+        <img src="Sapo 2 naranjo.png" alt="W3Schools.com" width="100" height="200">
         <p>Rey Vientre de fuego</p> 
         <img src="Sapo1 verde.png" alt="W3Schools.com" width="100" height="200">
         <p>Rey Escuerzo Argentino</p>
-        <img src="Textura final rana 3.png" alt="W3Schools.com" width="100" height="200">
+        <img src="Sapo1 moratrex.png" alt="W3Schools.com" width="100" height="200">
         <p>Rey Negro de la lluvia</p>
-        <img src="Textura final rana 5.png" alt="W3Schools.com" width="100" height="200">
+        <img src="Sapo 2 clarito.png" alt="W3Schools.com" width="100" height="200">
         <p>Rey Bufote Viridis</p>  
     </body> 
 </html>
