--- a/rana.html
+++ b/rana.html
@@ -23,8 +23,8 @@
   </div>
 </nav>
     <body> 
-      <h2>¡Sigue nuestro paso a paso!</h2> 
-      <img src="Paso a paso sapo anura.jpg" alt="W3Schools.com" width="1080" height="860">
+        <h2>¡Sigue nuestro paso a paso!</h2> 
+      <img src="Paso a paso rana anura.jpg" alt="W3Schools.com" width="1200" height="600">
       <h2>¡Personaliza tu juego con estas texturas!</h2> 
         <img src="Textura final rana 1.jpeg" alt="W3Schools.com" width="150" height="150">
         <p>Clan flecha azul</p> 
