--- a/flor.html
+++ b/flor.html
@@ -26,7 +26,7 @@
       <h2>¡Sigue nuestro paso a paso!</h2> 
       <img src="Paso a paso flor de loto anura.jpg" alt="W3Schools.com" width="1080" height="860">
       <h2>¡Personaliza tu juego con estas texturas!</h2> 
-        <img src="florc morada anura.png" alt="W3Schools.com" width="600" height="600">
-        <img src="Textura final rana 2.jpg" alt="W3Schools.com" width="600" height="600"  
+        <img src="florc rosa anura.png" alt="W3Schools.com" width="600" height="600">
+        <img src="florc morada anura.png" alt="W3Schools.com" width="600" height="600"  
     </body> 
 </html>
