--- a/nenufar.html
+++ b/nenufar.html
@@ -24,15 +24,8 @@
 </nav>
     <body> 
       <h2>¡Sigue nuestro paso a paso!</h2> 
-      <img src="Paso a paso sapo anura.jpg" alt="W3Schools.com" width="1080" height="860">
+      <img src="Paso a paso nenufar anura.jpg" alt="W3Schools.com" width="1125" height="840">
       <h2>¡Personaliza tu juego con estas texturas!</h2> 
         <img src="Textura final rana 1.jpeg" alt="W3Schools.com" width="150" height="150">
-        <p>Clan flecha azul</p> 
-        <img src="Textura final rana 2.jpg" alt="W3Schools.com" width="150" height="150">
-        <p>Clan ojos rojos</p>
-        <img src="Textura final rana 3.png" alt="W3Schools.com" width="150" height="150">
-        <p>Clan dorada</p>
-        <img src="Textura final rana 5.png" alt="W3Schools.com" width="150" height="150">
-        <p>Clan arlequin</p>  
     </body> 
 </html>
