--- a/nenufar.html
+++ b/nenufar.html
@@ -26,6 +26,6 @@
       <h2>¡Sigue nuestro paso a paso!</h2> 
       <img src="Paso a paso nenufar anura.jpg" alt="W3Schools.com" width="1125" height="840">
       <h2>¡Personaliza tu juego con estas texturas!</h2> 
-        <img src="Textura final rana 1.jpeg" alt="W3Schools.com" width="150" height="150">
+        <img src="Hoja nenufar.png" alt="W3Schools.com" width="150" height="150">
     </body> 
 </html>
