--- a/rana.html
+++ b/rana.html
@@ -23,6 +23,9 @@
   </div>
 </nav>
     <body> 
+        <h2>Rana saltarina</h2>
+        <h3>Para construir una rana saltarina se necesita una hoja de 10,8 x 10,8 cm; desde una hoja carta se pueden hacer 4 ranas. Se necesitan dos hojas para hacer las 8 ranas, 4 por jugador.</h3>
+        <img src="Paso a paso rana anura.jpg" alt="W3Schools.com" width="1200" height="600">
         <h2>¡Sigue nuestro paso a paso!</h2> 
       <img src="Paso a paso rana anura.jpg" alt="W3Schools.com" width="1200" height="600">
       <h2>¡Personaliza tu juego con estas texturas!</h2> 
