--- a/sapo.html
+++ b/sapo.html
@@ -19,8 +19,12 @@
   </div>
 </nav>
     <body> 
+      <h2>Sapo saltarín</h2> 
+        <p>Para construir un sapo se necesita una hoja de 15,4 x 7.7 cm, se puede recortar el sapo de la misma hoja en donde se pueden recortar 2 flores.</p>   
       <h2>¡Sigue nuestro paso a paso!</h2> 
       <img src="Paso a paso sapo anura.jpg" alt="W3Schools.com" width="1080" height="860">
+        <h2>¡Sigue nuestro paso a paso en un video tutorial!</h2> 
+        <p>Si los pasos anteriores no han quedado demasiado claros te dejamos un  vídeo tutorial, en el cual se explica el proceso fácilmente.</p> 
       <h2>¡Personaliza tu juego con estas texturas!</h2> 
         <img src="Sapo 2 naranjo.png" alt="W3Schools.com" width="100" height="200">
         <p>Rey Vientre de fuego</p> 
