--- a/rana.html
+++ b/rana.html
@@ -22,6 +22,8 @@
         <h2>Rana saltarina</h2>
         <p>Para construir una rana saltarina se necesita una hoja de 10,8 x 10,8 cm; desde una hoja carta se pueden hacer 4 ranas. Se necesitan dos hojas para hacer las 8 ranas, 4 por jugador.</p>
         <img src="Cortes rana anura.jpg" alt="W3Schools.com" width="1200" height="600">
+        <h2>¡Sigue nuestro paso a paso en un video tutorial!</h2> 
+        <p>Si los pasos anteriores no han quedado demasiado claros te dejamos un  vídeo tutorial, en el cual se explica el proceso fácilmente.</p> 
         <h2>¡Sigue nuestro paso a paso!</h2> 
       <img src="Paso a paso rana anura.jpg" alt="W3Schools.com" width="1075" height="470">
       <h2>¡Personaliza tu juego con estas texturas!</h2> 
