--- a/nenufar.html
+++ b/nenufar.html
@@ -19,8 +19,12 @@
   </div>
 </nav>
     <body> 
+        <h2>Tablero de nenufar</h2> 
+        <p>Para construir el tablero, se necesita construir previamente 6 nenúfares, para luego juntarlas, para ello se ocupa una hoja de 14 x 10,8 cm.</p> 
       <h2>¡Sigue nuestro paso a paso!</h2> 
       <img src="Paso a paso nenufar anura.jpg" alt="W3Schools.com" width="1125" height="840">
+        <h2>¡Sigue nuestro paso a paso en un video tutorial!</h2> 
+        <p>Si los pasos anteriores no han quedado demasiado claros te dejamos un  vídeo tutorial, en el cual se explica el proceso fácilmente.</p> 
       <h2>¡Personaliza tu juego con estas texturas!</h2> 
         <img src="Hoja nenufar.png" alt="W3Schools.com" width="150" height="150">
     </body> 
