--- a/flor.html
+++ b/flor.html
@@ -19,8 +19,12 @@
   </div>
 </nav>
     <body> 
+         <h2>Flor de loto</h2> 
+        <p>Para construir la flor se necesita una hoja de 14x14 cm, de una hoja se pueden obtener 2 flores, por ende, de 3 hojas se obtienen 6 flores, 3 para cada jugador.</p> 
       <h2>¡Sigue nuestro paso a paso!</h2> 
       <img src="Paso a paso flor de loto anura.jpg" alt="W3Schools.com" width="1135" height="730">
+         <h2>¡Sigue nuestro paso a paso en un video tutorial!</h2> 
+        <p>Si los pasos anteriores no han quedado demasiado claros te dejamos un  vídeo tutorial, en el cual se explica el proceso fácilmente.</p> 
       <h2>¡Personaliza tu juego con estas texturas!</h2> 
         <img src="florc rosa anura.png" alt="W3Schools.com" width="400" height="400">
         
