--- a/nenufar.html
+++ b/nenufar.html
@@ -25,12 +25,12 @@
       <img src="Paso a paso nenufar anura.jpg" alt="W3Schools.com" width="1125" height="840">
         <h2>¡Sigue nuestro paso a paso en un video tutorial!</h2> 
         <p>Si los pasos anteriores no han quedado demasiado claros te dejamos un  vídeo tutorial, en el cual se explica el proceso fácilmente.</p>
-        
-        <h2>Tablero principiante</h2> 
+        <h2>¡Elige tu tablero según tu nivel de técnica!</h2> 
+        <h3>Tablero principiante</h3> 
         <img src="Tablero 1 ANURA.jpg" alt="W3Schools.com" width="150" height="150">
-        <h2>Tablero intermedio</h2> 
+        <h3>Tablero intermedio</h3> 
         <img src="Tablero 1 ANURA.jpg" alt="W3Schools.com" width="150" height="150">
-        <h2>Tablero avanzado</h2> 
+        <h3>Tablero avanzado</h3> 
         <img src="Tablero 1 ANURA.jpg" alt="W3Schools.com" width="150" height="150">
         
        <h2>¡Personaliza tu juego con estas texturas!</h2> 
