--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html> 
 <html>
 <body>
+  <div class="item1"><img src="imagenes/toolbar%20pelada.png" alt="toolbar pelada" width="100%"></div> 
+
+<div class="item2"><ul>
   <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
