--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 <body>
-  <div class="item1"><img src="imagenes/toolbar%20pelada.png" alt="toolbar pelada" width="100%"></div> 
+  <div class="item1"><img src="toolbar pelada.png" alt="toolbar pelada" width="100%"></div> 
 
 <div class="item2"><ul>
   <a class="navbar-brand" href="#"></a>
