--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 <html>
 <body>
+  <img src="toolbar pelada.png" alt="W3Schools.com" width="1200">
   <div class="item1"><img src="toolbar pelada.png" alt="toolbar pelada" width="100%"></div> 
 
 <div class="item2"><ul>
