--- a/sapo.html
+++ b/sapo.html
@@ -2,6 +2,7 @@
 <html>
     
 <body>
+    <img src="toolbar pelada.png" alt="W3Schools.com" width="1200">
   <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
