--- a/rana.html
+++ b/rana.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <img src="toolbar pelada.png" alt="W3Schools.com" width="1200">
   <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
