--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html> 
 <html>
+  <head>
+        <link rel="stylesheet" type="text/css" href="ayuda.css">
+    <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <title>R E U S</title>
+    </head>
 <body>
   <img src="toolbar pelada.png" alt="W3Schools.com" width="1600">
   <a class="navbar-brand" href="#"></a>
