--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
         <title>Batalla Anura</title>
     </head>
-<body>
+  <body id="colaborar">
+    <div class="grid-container">
+    
+    <div class="item1"><nav>
   <img src="toolbar pelada.png" alt="W3Schools.com" width="1200">
   <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
