--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li><a href="rana.html">Rana saltarina</a></li>
         <li><a href="sapo.html">Sapo saltarin</a></li>
         <li><a href="flor.html">Flor de loto</a></li>
-    </ul>
+    </ul> </nav>
   </div>
     <body> 
       <h2>¡Sigue nuestro paso a paso!</h2> 
