--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
+  <div class="item2"><ul>
     <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="#">Batalla Anura</a>
@@ -27,8 +27,8 @@
         <li><a href="sapo.html">Sapo saltarin</a></li>
         <li><a href="flor.html">Flor de loto</a></li>
     </ul> </nav>
-  </div>
-    <body> 
+  </div>      
+        </ul></div> 
       <h2>¡Sigue nuestro paso a paso!</h2> 
       <img src="Paso a paso rana anura.jpg" alt="W3Schools.com" width="1200" height="600">
       <h2>¡Personaliza tu juego con estas texturas!</h2> 
