--- a/index.html
+++ b/index.html
@@ -12,17 +12,9 @@
     <div class="grid-container">
     
     <div class="item1"><nav>
-  <img src="toolbar pelada.png" alt="W3Schools.com" width="1200">
-  <a class="navbar-brand" href="#"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="item2"><ul>
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Batalla Anura</a>
-      </li>
-        <li><a href="nenufar.html">Tablero Nenufar</a></li>
+      <ul class = "mainMenu">
+  <li><a class="nav-link" href="#">Batalla Anura</a></li>
+       <li><a href="nenufar.html">Tablero Nenufar</a></li>
         <li><a href="rana.html">Rana saltarina</a></li>
         <li><a href="sapo.html">Sapo saltarin</a></li>
         <li><a href="flor.html">Flor de loto</a></li>
