--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="grid-container">
     
     <div class="item1"><nav>
-     <div class="item1"><img src="imagenes/toolbar%20pelada.png" alt="toolbar pelada" width="100%"></div> 
+     <div class="item1"><img src="toolbar pelada.png" alt="toolbar pelada" width="100%"></div> 
       
       <div class="item2"><ul>
             <li><a href="https://catalinasgp.github.io/batalla-anura/nenufar.html#">Inicio</a></li>
